SERVER-13210: include nModified for all mongod write commands

(cherry picked from commit e200a2274f34ba016a123cc4bc943dfe22426e93)