jstests/core/batch_write_command_update.js
@@ -260,7 +260,7 @@ printjson( request = {update : coll.getName(),
 printjson( result = coll.runCommand(request) );
 assert(result.ok);
 assert.eq(2, result.n);
-assert.eq(undefined, result.nModified, "wrong nModified")
+assert.eq(0, result.nModified, "wrong nModified")
 assert.eq(1, result.writeErrors.length);
 
 assert.eq(2, result.writeErrors[0].index);
@@ -287,7 +287,7 @@ printjson( request = {update : coll.getName(),
 printjson( result = coll.runCommand(request) );
 assert(result.ok);
 assert.eq(2, result.n);
-assert.eq(undefined, result.nModified, "wrong nModified");
+assert.eq(0, result.nModified, "wrong nModified");
 assert.eq(2, result.writeErrors.length);
 
 assert.eq(1, result.writeErrors[0].index);
